Re-implement https://issues.jenkins-ci.org/browse/JENKINS-9521 for hudson + move version information to top-level pom